Security fixes, consolidated migrations, disable Flyway validation temporarily for repair